fix align

--- a/urlannotator/statics/less/base.less
+++ b/urlannotator/statics/less/base.less
@@ -316,7 +316,7 @@ td.statusCol {
 
 .alert-container {
   position: absolute;
-  margin-top: -55px;
+  margin-top: -57px;
   .alert {
     margin-bottom:6px;
   }
